--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.8",
-    "next": "14.2.8",
+    "next": "^14.2.8",
     "qlearning-gridworld-example": "file:",
     "react": "^18",
     "react-dom": "^18"
